--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "kickstart-dao",
+  "name": "dao-kickstart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@3rdweb/hooks": "^1.9.2",
-    "@3rdweb/sdk": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@3rdweb/hooks": "^1.6.0",
+    "@3rdweb/sdk": "^1.27.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
